party-deployment/registry/ns-registry.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: umzhc-registry
  name: umzhc-registry
